--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart" : "nodemon server.js"
+    "devStart" : "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,15 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
-    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express-graphql": "^0.7.1",
-    "graphql": "^14.7.0",
-    "graphql.macro": "^1.4.2",
-    "mongoose": "^6.4.0",
-    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
