--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{ "source": "/leetcode/(.*)", "destination": "/leetcode" }]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use" : "@vercel/node"
+    }
+  ],
+  "route" : [
+    {
+      "src" : "/(.*)",
+      "dest" : "index.js"
+    }
+  ]
+}
